Fix list sidebar on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -338,6 +338,11 @@ button:focus, button:active  {
   display: none;
 }
 
+.list-name-wrapper {
+  width: 80%;
+  text-align: left;
+}
+
 @media (max-width: 700px) {
   .app, .dark-mode .app{
     display: flex;
